# page-loader

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: page-loader-CI.yml
page_loader/: cli.py  loader.py  logger.py  page_loader.py
page_loader/scripts/: main.py  page_loader.py
tests/: test_loader.py  test_page_loader.py
tests/fixtures/: ru-hexlet-io-courses_test.html
