[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The third training project from Python developer course"
authors = ["ratushnyyvm <ratushnyyvm@gmail.com>"]
repository = "https://github.com/ratushnyyvm/python-project-51.git"
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Education",
]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
flake8 = "^5.0.4"

[tool.poetry.scripts]
page_loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
