[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "cli-utility to download web pages"
authors = ["ratushnyyvm <ratushnyyvm@gmail.com>"]
repository = "https://github.com/ratushnyyvm/page-loader"
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Education",
]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
progress = "^1.6"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
